дз: исправил SearchServiceTest